<resources>
    <string name="app_name">Stream Movies Application</string>
    <string name="home">HOME</string>
    <string name="play">PLAY</string>
    <string name="profile">PROFILE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stream_everywhere">Stream Everywhere</string>
    <string name="movie_banner_displaying_movie_currently_being_watched">movie_banner_displaying_movie currently being watched</string>
    <string name="play_icon_in_orange_color">play icon in orange color</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="ready_player_one">Ready Player One</string>
    <string name="trending">Trending</string>
    <string name="image_displaying_trending_movie_poster">Image displaying trending movie poster</string>
    <string name="imdb">IMDb</string>
    <string name="_7_0">7.0</string>
    <string name="star_wars_the_last_jedi">Star Wars: The Last Jedi</string>
    <string name="icon_showing_movie_rating">icon showing movie rating</string>
    <string name="profile_nav_fragment">Profile Nav Fragment</string>
    <string name="details_placeholder_text">Star Wars: The Last Jedi</string>
    <string name="rating_4k">4K</string>
    <string name="tv_clock_value">152 Minutes</string>
    <string name="action">Action</string>
    <string name="placeholder_movie">Movie Title</string>
    <string name="rating_text">7.0 (iMDb)</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="december_9_2017">December 9, 2017</string>
    <string name="action_detail">Action</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="synopsis">Synopsis</string>
    <string name="synopsis_detail">Rey (Daisy Ridley) finally manages to find the legendary Jedi knight, Luke Skywalker (Mark Hamill) on an island with a magical aura. The heroes of The Force Awakens including Leia, Finn Read more..</string>
    <string name="related_movies">Related Movies</string>
</resources>