<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="224dp"
    android:layout_height="296dp"
    app:cardElevation="@dimen/elevation_4dp"
    app:cardCornerRadius="@dimen/radius_30dp"
    android:layout_marginEnd="@dimen/margin_24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/poster"
        android:contentDescription="@string/image_displaying_trending_movie_poster"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_rating"
            android:layout_width="@dimen/width_77dp"
            android:layout_height="@dimen/height_46dp"
            app:cardCornerRadius="@dimen/radius_15dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            app:cardBackgroundColor="@color/pop_up_bg"
            android:elevation="@dimen/elevation_0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <TextView
                    android:id="@+id/tv_imdb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:layout_marginTop="@dimen/margin_6dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/imdb"
                    android:textSize="@dimen/text_8sp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/iv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_imdb"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/margin_1dp"
                    android:layout_marginStart="@dimen/margin_8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/margin_8dp"
                    android:src="@drawable/yellow_star"/>

                <TextView
                    android:id="@+id/tv_rating_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:layout_marginEnd="@dimen/margin_9dp"
                    android:fontFamily="@font/lato"
                    android:text="@string/_7_0"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="@id/iv_rating"
                    app:layout_constraintBottom_toBottomOf="@id/iv_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_rating" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_movie_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_76dp"
            app:cardBackgroundColor="@color/pop_up_bg"
            app:cardCornerRadius="@dimen/radius_20dp"
            app:cardElevation="@dimen/elevation_0dp"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:fontFamily="@font/lato"
                android:text="@string/star_wars_the_last_jedi"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>