<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.tabViews.tabDetailsScreens.tabMovieDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdTabMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/screen_bg"
        android:elevation="@dimen/elevation_4dp"
        android:background="@drawable/poster"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivTabDetails"
            android:layout_width="match_parent"
            android:layout_height="289dp"
            android:src="@drawable/poster"
            android:scaleType="fitXY"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_tab_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_24sp"
        android:text="@string/details_placeholder_text"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cdTabMovieDetails"
        android:padding="@dimen/padding_14dp"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/lato"
        android:textStyle="normal"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/iv_rating"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_tab_details"
        app:layout_constraintTop_toTopOf="@id/tv_tab_details"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_tab_details">

        <TextView
            android:id="@+id/tv_rating_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/rating_4k"/>
    </androidx.cardview.widget.CardView>
    
    <ImageView
        android:id="@+id/iv_Clock"
        android:layout_width="@dimen/clock_dimen_24dp"
        android:layout_height="@dimen/clock_dimen_24dp"
        android:src="@drawable/clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_details"
        android:layout_marginTop="@dimen/margin_12dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/tv_Clock_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clock"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/iv_Clock"
        app:layout_constraintTop_toTopOf="@id/iv_Clock"
        android:text="@string/tv_clock_value"
        android:layout_marginStart="19dp"/>

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="@dimen/clock_dimen_24dp"
        android:layout_height="@dimen/clock_dimen_24dp"
        android:src="@drawable/white_star"
        app:layout_constraintStart_toEndOf="@id/tv_Clock_value"
        app:layout_constraintTop_toTopOf="@id/tv_Clock_value"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/tv_star_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7.0 (iMDb)"
        app:layout_constraintStart_toEndOf="@id/iv_star"
        app:layout_constraintTop_toTopOf="@id/iv_star"
        android:textColor="@color/white"/>







</androidx.constraintlayout.widget.ConstraintLayout>